# PrismQ.Client

./: .dockerignore  .gitignore  DATA_DIRECTORY_RATIONALE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FLOW.md  Dockerfile  MOBILE-TESTING-SETUP.md  OLD_FILES_TO_REMOVE.md  PLATFORM_COMPARISON.md  Procfile  QUICK_DEPLOY.md  README.md  SINGLE_RESPONSIBILITY_MODULE_PATTERN.md  WORKER10_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  heroku.yml  package-lock.json  package.json  playwright.config.ts  railway.json  render.yaml  start_production.sh  vercel.json
Backend/: README.md  pyproject.toml
Backend/API/: FINAL_REPORT.md  README.md  __init__.py  database.py
Backend/API/endpoints/: task_list.py
Backend/API/models/: __init__.py  task_list.py  task_type.py
Backend/Modules/: README.md
Backend/Modules/endpoints/: __init__.py
Backend/Modules/models/: module.py
Backend/OldBackend/: .envrc  README.md  start_server.bat
Backend/OldBackend/API/: IMPLEMENTATION_SUMMARY.md  database.py
Backend/OldBackend/src/: uvicorn_runner.py
Backend/TaskManager/: .gitignore  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  ENDPOINT_EXAMPLES.md  PERFORMANCE_MONITORING.md  PROGRESS_TRACKING.md  PR_SUMMARY.md  QUERY_PROFILER_GUIDE.md  QUICK_START_DEPLOY.md  README.md  SECURITY_HARDENING_SUMMARY.md  SWAGGER_DEPLOYMENT_INFO.md  WORKER03_IMPLEMENTATION_SUMMARY.md  check_setup.php  composer.json  deploy-deploy.php  deploy.php  setup_database.php  test_performance_monitor.php  test_syntax.php  validate_openapi.sh
Backend/configs/: modules.json
Backend/src/: __init__.py  main.py
(+953 files in other folders)
